@@ -51,6 +51,7 @@ fields as well.
 .It Ar text
 Regular expression match against the post
 .Fa content .
+The special value of "." will match any post with a summary only.
 .It Ar is announce
 Is announced (shared).
 .It Ar announce of
